2014-01-09  Zan Dobersek  <zdobersek@igalia.com>

        Revert back to using the -n option when producing symbolic links to the GTK-specific
        API directories under Source/WebKit2/. Removing the option in r161497 resulted in
        recursive links being created under those directories since the links were dereferenced.

        To actually ensure that the link is created anew, remove it so it is reconstructed.

        Rubber-stamped by Carlos Garcia Campos.

        * GNUmakefile.am:

2014-01-09  Carlos Garcia Campos  <cgarcia@igalia.com>

        Crash when starting a download before the network process has been launched
        https://bugs.webkit.org/show_bug.cgi?id=126258

        Reviewed by Anders Carlsson.

        We need to ensure there's a network process running before
        starting a new download like we do when using the web process.

        * UIProcess/WebContext.cpp:
        (WebKit::WebContext::download): Use ChildProcessProxy::send()
        instead of using the connection to make sure messages are queued
        if the process is still launching.
        (WebKit::WebContext::createDownloadProxy): Call
        ensureNetworkProcess() before creating the download proxy.

2014-01-09  Carlos Garcia Campos  <cgarcia@igalia.com>

        [SOUP] Partial file left on disk after a download fails or is cancelled in WebKit2
        https://bugs.webkit.org/show_bug.cgi?id=126686

        Reviewed by Martin Robinson.

        We are currently writing the downloads directly into the
        destination, and when a download fails or is cancelled after the
        destination has been decided, the partial file is left on the
        disk. Deleting the final file is not safe because there might be a
        race condition, so we can use an intermediate file like other
        browsers do, a file in the same directory than the target
        destination but with .wkdownload suffix, that is removed when the