@@ -1,3 +1,14 @@
+2014-01-09  Dan Bernstein  <mitz@apple.com>
+
+        [Cocoa] Promote WKBackForwardList{,Item}.h to public
+        https://bugs.webkit.org/show_bug.cgi?id=126707
+
+        Reviewed by Sam Weinig.
+
+        * UIProcess/API/Cocoa/WKBackForwardList.h: Stopped including the C API header.
+        * UIProcess/API/Cocoa/WKBackForwardListItem.h: Ditto.
+        * WebKit2.xcodeproj/project.pbxproj: Made the headers public.
+
 2014-01-09  Zan Dobersek  <zdobersek@igalia.com>
 
         Revert back to using the -n option when producing symbolic links to the GTK-specific
